    and their types can now be introspected.

* Remote control commands are now provided by `kombu.pidbox`, the generic
  process mailbox.

* `celery.worker.listener` has been renamed to `celery.worker.consumer`,
  and `.CarrotListener` is now `.Consumer`.

* Previously deprecated modules `celery.models` and
  `celery.management.commands` has now been removed as per the deprecation
  timeline.



.. _v220-news:

News
----

* Added support for message compression using the
  :setting:`CELERY_MESSAGE_COMPRESSION` setting, or the `compression` argument
  to `apply_async`.  This can also be set using routers.

* `TaskSetResult.join_native`: Backend-optimized version of `join()`.

    If available, this version uses the backends ability to retrieve
    multiple results at once, unlike `join()` which fetches the results
    one by one.

    So far only supported by the AMQP result backend.  Support for memcached
    and Redis may be added later.

* `celerybeat`: Now has built-in daemonization support using the `--detach``
   option.

* Added :setting:`CELERY_SEND_TASK_SENT_EVENT` setting.

    If enabled an event will be sent out with every task, so monitors can
    track tasks before the workers receive them.

* `celerybeat`: Now reuses the connection.

* The configuration module and loader to use can now be specified on
  the command line.

    For example::

        $ celeryd --config=celeryconfig.py --loader=myloader.Loader

.. _version-2.1.4:

2.1.4
=====
:release-date: 2010-12-03 12:00 PM CEST

.. _v214-fixes:

Fixes
-----

* Execution options to `apply_async` now takes precedence over options
  returned by active routers.  This was a regression introduced recently
  (Issue #244).

* `celeryev` curses monitor: Long arguments are now truncated so curses
  doesn't crash with out of bounds errors.  (Issue #235).

* `celeryd`: Channel errors occurring while handling control commands no
  longer crash the worker but are instead logged with severity error.
